@@ -1,3 +1,7 @@
+2008-06-11  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* buffer.c (clone_per_buffer_values): Skip `name'.
+
 2008-06-11  Chong Yidong  <cyd@stupidchicken.com>
 
 	* font.c (font_parse_fcname): Fix last change; accept decimal
